# dopesuite

./: .gitignore  AGENTS.md  CONTEXT-MAP.md  README.md  TODO.md  deploy.py  justfile  package-lock.json  package.json  tsconfig.base.json
docs/adr/: 0001-unified-frontend-toolchain.md
docs/agents/: domain.md  issue-tracker.md
dope/: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTEXT.md  TASKS.md  auth.go  auth_test.go  bootstrap.go  db.go  deploy.py  go.mod  go.sum  justfile  main.go  main_test.go  package-lock.json  package.json  pages.go  pages_host.go  pages_public.go  rating_import.go  refactor-report.html  register.go  scoped_api.go  tsconfig.json
dope/docs/: reactive-resolver-plan.md  unified-model.md
dope/dope/: api_authz_test.go  audit.go  audit_bench_test.go  audit_compress.go  audit_prune.go  audit_prune_test.go  audit_revert_test.go  audit_size_test.go  audit_test.go  auth.go  auth_test.go  bootstrap.go  compact_audit.go  compact_audit_test.go  convert_history.go  db.go  delta_coalesce_test.go  e2e_untick_test.go  edit_batch.go  edit_batch_test.go  edit_metrics.go  edit_metrics_test.go  ek_batch_test.go  ek_import.go  epoch_test.go  game_results.go  game_results_test.go  host_accessors.go  journal_archive.go  journal_archive_test.go  journal_checkpoint.go  journal_checkpoint_test.go  journal_convert.go  journal_describe_test.go  journal_dsl.go  journal_dsl_test.go  journal_live.go  journal_live_test.go  journal_replay.go  journal_replay_test.go  (+51 more)
dope/scripts/: cdp.py  editmetrics.py  fill_data.py  generate_studchr_grid.py  mint_invite.py  webbuild.mjs
dope/specs/: 01-existing.md  02-domain.md  03-sqlite.md  03a-sqlite-core.md  03b-sqlite-match.md  03c-sqlite-field-rules.md  03d-sqlite-match-fields.md  04-scheme-json.md  04a-scheme-sources.md  05-studchr-ek.md  06-ui-api.md  07-implementation.md  08-auth.md  09-fests-and-games.md  09-tournaments-and-games.md  README.md
dope/static/: host.html  host.js  import.html  import.js  login.html  login.js  od.html  od.js  si.js  styles.css  tournament-grid.js  viewer.html  viewer.js
dopecore/: go.mod
dopeuikit/: .gitignore  AGENTS.md  CONTEXT.md  DESIGN.md  README.md  go.mod  tsconfig.json
scripts/: webbuild.mjs
xy/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  OVERVIEW.md  PLAN.md  README.md  constrained-ui-brief.md  deploy.py  go.mod  go.sum  justfile  tsconfig.json  tsconfig.sw.json
xy/typst-wasm/: Cargo.toml
xy/typst-wasm/src/: lib.rs
(+660 files in other folders)
